--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <h1>XHR</h1>
+    <div id="zoo"></div>
     <script src="main.js"></script>
 </body>
 </html>
