--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>XHR</h1>
+    <h1>ZOO</h1>
     <div id="zoo"></div>
     <script src="main.js"></script>
 </body>
